# glTF2Image

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: build.yaml
managed/: GLTF2Image.sln
managed/GLTF2Image/: CallbackContext.cs  GLTF2Image.csproj  GLTFAsset.cs  InvalidSceneException.cs  NativeMethods.cs  RenderJob.cs  RenderManager.cs  Renderer.cs  WorkQueue.cs
managed/GLTF2Image.SampleApp/: GLTF2Image.SampleApp.csproj  Program.cs
managed/GLTF2Image.SampleApp/Properties/: launchSettings.json
managed/GLTF2Image.SampleApp/TestData/: avocado_lights_and_camera.gltf
managed/GLTF2Image.Tests/: GLTF2Image.Tests.csproj  RenderManagerTests.cs  RendererTests.cs
managed/GLTF2Image.Tests/Properties/: launchSettings.json
managed/GLTF2Image.Tests/TestData/: orthographic_camera.gltf  red_triangle_unlit.gltf
native/: build-dependencies.py  build-native.py  filament_use_swiftshader_relative_path.patch  swiftshader_no_download_commit_hook.patch
native/filament_patches/: 0001-use-swiftshader-relative-path.patch  0002-fix-backend-tests-for-vulkan-only-build.patch
native/gltf2image/: APITypes.h  CMakeLists.txt  GLTFRender.cpp  GLTFRender.h  GLTFRenderAPI.cpp  LogAPI.cpp  RenderManager.cpp  RenderManager.h  WorkQueue.cpp  WorkQueue.h
native/swiftshader_patches/: 0001-no-download-commit-hook.patch  0001-static-link-c-libraries.patch  0002-static-link-c-libraries.patch
