cmake_minimum_required(VERSION 3.19)
project(gltf2image_native)

# Detect architecture
if(CMAKE_SYSTEM_PROCESSOR MATCHES "AMD64|x86_64|x64")
    set(ARCH "x64")
    set(FILAMENT_ARCH "x86_64")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|ARM64|arm64")
    set(ARCH "arm64")
    set(FILAMENT_ARCH "aarch64")
else()
    message(FATAL_ERROR "Unsupported architecture: ${CMAKE_SYSTEM_PROCESSOR}")
endif()

if(MSVC)
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(FILAMENT_ROOT ${CMAKE_CURRENT_LIST_DIR}/../filament/out/win-${ARCH}-debug/sdk)
    else()
        set(FILAMENT_ROOT ${CMAKE_CURRENT_LIST_DIR}/../filament/out/win-${ARCH}/sdk)
    endif()
else()
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(FILAMENT_ROOT ${CMAKE_CURRENT_LIST_DIR}/../filament/out/linux-${ARCH}-debug/sdk)
    else()
        set(FILAMENT_ROOT ${CMAKE_CURRENT_LIST_DIR}/../filament/out/linux-${ARCH}/sdk)
    endif()
endif()

set(FILAMENT_LIBS_DIR ${FILAMENT_ROOT}/lib/${FILAMENT_ARCH}/)
set(FILAMENT_INCLUDE_DIR ${FILAMENT_ROOT}/include)

set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)

if(MSVC)
    # By default, filament disables STL runtime checks in Debug. We need the same setting to link against it
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_ITERATOR_DEBUG_LEVEL=0")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -stdlib=libc++")
endif()

add_library(gltf2image_native SHARED
    GLTFRenderAPI.cpp
    RenderManager.cpp
    LogAPI.cpp)

target_include_directories(gltf2image_native PRIVATE ${FILAMENT_INCLUDE_DIR})

find_library(FILAMENT_BACKEND backend ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_BLUEVK bluevk ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_DRACODEC dracodec ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_FILABRIDGE filabridge ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_FILAFLAT filaflat ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_FILAMENT filament ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_GEOMETRY geometry ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_GLTFIO_CORE gltfio_core ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_IBL ibl ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_MESHOPTIMIZER meshoptimizer ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_SMOL_V smol-v ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_STB stb ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_UBERARCHIVE uberarchive ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_UBERZLIB uberzlib ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_UTILS utils ${FILAMENT_LIBS_DIR})
find_library(FILAMENT_ZSTD zstd ${FILAMENT_LIBS_DIR})

target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_BACKEND})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_BLUEVK})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_DRACODEC})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_FILABRIDGE})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_FILAFLAT})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_FILAMENT})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_GEOMETRY})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_GLTFIO_CORE})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_IBL})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_MESHOPTIMIZER})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_SMOL_V})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_STB})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_UBERARCHIVE})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_UBERZLIB})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_UTILS})
target_link_libraries(gltf2image_native PRIVATE ${FILAMENT_ZSTD})

if(WIN32)
    target_link_libraries(gltf2image_native PRIVATE shlwapi opengl32)
endif()

if(NOT MSVC)
    target_link_options(gltf2image_native PRIVATE -static-libgcc -static-libstdc++)
    target_link_options(gltf2image_native PRIVATE "LINKER:--exclude-libs=ALL")
endif()
